# cimar-llvm

./: .gitignore  CMakeLists.txt  README.md  build.sh
cimapass/: CMakeLists.txt  cima_runtime.cpp  cimapass.cpp  cimapass_nearest_valid.cpp  cimapass_tainted.cpp
stats/: benchmarks.txt  stream_benchmarks.txt
tests/: benchmark_dir.py  pipeline_unified.sh
tests/basic_tests/: asan_tests.c  heap_use_after_free.c  loop.c  loop_avail.c  loop_r.c  main.c  oob.c  stack_buffer_overflow.c  test_array.c
tests/nearest_valid_tests/: adc_nearest_valid.c  nearest_valid_basic.c
tests/taint_tests/: taint1.c  taint2.c  taint_direct.c  taint_div.c  taint_indirect.c  taint_loop.c  taint_merge.c  taint_ptr.c  taint_simpl_br.c  taint_store_skip.c  taint_struct.c  water_treatment_level_attack.c  water_treatment_level_control.c
